--- a/app/src/main/res/layout/dialog_loading.xml
+++ b/app/src/main/res/layout/dialog_loading.xml
@@ -5,8 +5,8 @@
     android:layout_height="match_parent">
 
     <com.airbnb.lottie.LottieAnimationView
-        android:layout_width="@dimen/animation_loading"
-        android:layout_height="@dimen/animation_loading"
+        android:layout_width="@dimen/animation_loading_size"
+        android:layout_height="@dimen/animation_loading_size"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
