--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,10 +3,10 @@
     <color name="purple_200">#FFBB86FC</color>
     <color name="purple_500">#FF6200EE</color>
     <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
+    <color name="green_light">#FF03DAC5</color>
+    <color name="green_dark">#FF018786</color>
     <color name="asphalt">#34495e</color>
-    <color name="black">#FF000000</color>
+    <color name="black">#442C2E</color>
     <color name="white">#FFFFFFFF</color>
     <color name="orange_light">#f39c12</color>
     <color name="orange">#e67e22</color>
