--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,6 +2,7 @@
 <resources>
     <dimen name="animation_loading_size">150dp</dimen>
     <dimen name="animation_not_found_size">200dp</dimen>
+    <dimen name="animation_network_error_size">200dp</dimen>
     <dimen name="elevation_default_size">6dp</dimen>
     <dimen name="outer_big_size">60dp</dimen>
     <dimen name="inner_big_size">30dp</dimen>
@@ -11,4 +12,8 @@
     <dimen name="inner_smalldium_size">20dp</dimen>
     <dimen name="outer_small_size">30dp</dimen>
     <dimen name="inner_small_size">15dp</dimen>
+    <dimen name="text_category">16sp</dimen>
+    <dimen name="text_title">14sp</dimen>
+    <dimen name="text_descriptors">13sp</dimen>
+    <dimen name="container_top_apps_size">150dp</dimen>
 </resources>
