--- a/app/src/main/res/drawable/button_circle_background.xml
+++ b/app/src/main/res/drawable/button_circle_background.xml
@@ -1,6 +1,6 @@
 <shape android:shape="oval" xmlns:android="http://schemas.android.com/apk/res/android">
     <corners android:radius="10dp"/>
     <solid android:color="@android:color/white"/>
-    <stroke android:color="@color/gray_medium" />
+    <stroke android:color="@color/gray_light" />
     <stroke android:width="1dp" />
 </shape>
