--- a/app/src/main/res/layout/apps_item.xml
+++ b/app/src/main/res/layout/apps_item.xml
@@ -20,7 +20,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="UseAppTint"
-        tools:srcCompat="@drawable/ic_market" />
+        tools:srcCompat="@drawable/ic_pie_chart" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/appDetailsContainer"
@@ -54,34 +54,6 @@
             android:orientation="horizontal"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/appName">
-
-            <LinearLayout
-                android:id="@+id/appVersionContainer"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="10dp"
-                android:orientation="horizontal">
-
-                <ImageView
-                    android:id="@+id/appVersionIcon"
-                    android:layout_width="@dimen/inner_smalldium_size"
-                    android:layout_height="@dimen/inner_smalldium_size"
-                    android:layout_gravity="center"
-                    android:contentDescription="@string/app_icon_description"
-                    android:src="@drawable/ic_info"
-                    android:tint="@color/gray_medium"
-                    tools:ignore="UseAppTint" />
-
-                <TextView
-                    android:id="@+id/appVersion"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="5dp"
-                    android:textAlignment="textStart"
-                    android:textColor="@color/gray_dark"
-                    android:textSize="@dimen/text_descriptors"
-                    tools:text="3.1.0" />
-            </LinearLayout>
 
             <LinearLayout
                 android:id="@+id/appDownloadsContainer"
@@ -124,7 +96,7 @@
                     android:layout_height="@dimen/inner_smalldium_size"
                     android:layout_gravity="center"
                     android:contentDescription="@string/app_icon_description"
-                    android:src="@drawable/ic_box"
+                    android:src="@drawable/ic_pie_chart"
                     android:tint="@color/gray_medium"
                     tools:ignore="UseAppTint" />
 
@@ -160,9 +132,6 @@
             android:contentDescription="@string/app_icon_description"
             android:src="@drawable/ic_star"
             android:tint="@color/green_light"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
             tools:ignore="UseAppTint" />
 
         <TextView
