--- a/app/src/main/res/layout/apps_top_item.xml
+++ b/app/src/main/res/layout/apps_top_item.xml
@@ -3,11 +3,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="@dimen/container_top_apps_size"
-    android:layout_height="wrap_content"
-    android:layout_gravity="center_vertical"
+    android:layout_height="@dimen/container_top_apps_size"
     android:layout_margin="5dp"
     android:background="@drawable/rounded_rectangle"
-    android:padding="5dp">
+    android:padding="10dp">
 
     <ImageView
         android:id="@+id/appIcon"
@@ -19,29 +18,32 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="UseAppTint"
-        tools:srcCompat="@drawable/ic_market" />
+        tools:srcCompat="@drawable/ic_pie_chart" />
 
     <TextView
         android:id="@+id/appName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginHorizontal="5dp"
         android:layout_marginTop="5dp"
+        android:ellipsize="end"
+        android:maxLines="2"
         android:textAlignment="center"
         android:textColor="@color/black"
         android:textSize="@dimen/text_title"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/appIcon"
-        tools:text="MapCrumbs - Location keeper" />
+        tools:text="MapCrumbs - Location keeper Lorem ipsum Sporting campeão" />
 
     <LinearLayout
         android:id="@+id/appRatingContainer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintTop_toBottomOf="@id/appName"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent">
 
         <ImageView
             android:id="@+id/appRatingIcon"
@@ -53,9 +55,6 @@
             android:contentDescription="@string/app_icon_description"
             android:src="@drawable/ic_star"
             android:tint="@color/green_light"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
             tools:ignore="UseAppTint" />
 
         <TextView
@@ -68,5 +67,4 @@
             android:textSize="@dimen/text_descriptors"
             tools:text="4.35" />
     </LinearLayout>
-
 </androidx.constraintlayout.widget.ConstraintLayout>
