--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="green_light">#FF03DAC5</color>
-    <color name="green_dark">#FF018786</color>
+    <color name="purple_200">#BB86FC</color>
+    <color name="purple_500">#6200EE</color>
+    <color name="purple_700">#3700B3</color>
+    <color name="green_light">#03DAC5</color>
+    <color name="green_dark">#018786</color>
     <color name="asphalt">#34495e</color>
     <color name="black">#442C2E</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="white">#FFFFFF</color>
     <color name="orange_light">#f39c12</color>
     <color name="orange">#e67e22</color>
     <color name="orange_dark">#d35400</color>
